packages/typ/tests/fixtures/diagnostics/0128_adt_recursive_list_payload_mismatch_01.ml.expected
File "0128_adt_recursive_list_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0128_adt_recursive_list_payload_mismatch_01 is not a valid module name.

File "0128_adt_recursive_list_payload_mismatch_01.ml", line 2, characters 39-43:
2 | let _ : int mylist_alpha = Cons_alpha (true, Nil_alpha)
                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
